--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.password=1234
 spring.datasource.url=jdbc:mariadb://localhost:3306/board
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+spring.mvc.static-path-pattern=/files/**
