--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,13 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.url=jdbc:mariadb://localhost:3306/board
+
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+# 정적 리소스 위치 설정 (파일 저장 경로)
+spring.web.resources.static-locations=file:${user.home}/board/uploads/,classpath:/static/
+
+# 정적 파일 요청을 매핑할 URL 패턴
 spring.mvc.static-path-pattern=/files/**
+
